examples/test/testpolicy10117.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10117
  namespace: namespace342
spec:
  podSelector:
    matchLabels:
      key0: value32
      key29: value29
      key23: value39
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key18: value39
          key41: value39
          key6: value9
      podSelector:
        matchLabels:
          key19: value36
          key38: value17
          key46: value32
